# toolbox

./: .gitignore  README.md
scripts/: mf.sh
utilities/analysis/: ideas.txt
utilities/automation/: ideas.txt
utilities/communications/: ideas.txt
utilities/diagnostics/: ideas.txt
utilities/documentation/: mdconvert.md  rename.md  srm.md
utilities/dsp/: ideas.txt
utilities/general/: create.sh  ideas.txt  mf.sh
utilities/graphics/: ideas.txt
utilities/mdconvert/: Cargo.toml
utilities/media/: ideas.txt
utilities/media/auconv/: Cargo.toml
utilities/media/auconv/src/: main.rs
utilities/media/mdconvert/src/: main.rs
utilities/network/: ideas.txt
utilities/security/: ideas.txt
utilities/sound/: ideas.txt
utilities/sound/convolve/: Cargo.toml
utilities/sound/convolve/src/: main.rs
utilities/sound/play/: Cargo.toml  README.md
utilities/sound/play/src/: main.rs
utilities/system/: create.sh  ideas.txt  srm.sh
utilities/system/srm/: Cargo.toml  README.md  install.sh
utilities/system/srm/src/: main.rs
