[package]
name = "play"
version = "0.1.0"
edition = "2021"
authors = ["cuervo-blanco"]
description = "A terminal player"
license = "MIT"
repository = "https://github.com/cuervo-blanco/utilities"

[dependencies]
crossterm = "0.28.1"
rodio = "0.19.0"
clap = { version = "4.5.20", features = ["derive"] }
