[package]
name = "srm"
version = "0.1.0"
edition = "2021"
authors = ["cuervo-blanco"]
description = "A safe remove (srm) tool in Rust with collector functionality"
license = "MIT"
repository = "https://github.com/cuervo-blanco/utilities"

[dependencies]
chrono = "0.4.28"
lazy_static = "1.5.0"
indicatif = "0.17.8"
dialoguer = "0.11.0"
